# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "bautils"
description = "Bauke's Ad-hoc Utilities."
repository = "https://github.com/Bauke/bautils"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Bauke <me@bauke.xyz>"]
edition = "2021"

[[bin]]
name = "bautils"
path = "source/main.rs"

[dependencies]
chrono = "0.4.30"
regex = "1.10.2"

[dependencies.clap]
features = ["derive"]
version = "4.4.7"
